# resize-my-knight

./: AppImageBuilder.yml  AppImageBuilder_old.yml  Cargo.toml  Dockerfile  README.md  app.desktop
src/: main.rs
src/ui/: app.slint  knight.slint
ui/: app.slint  knight.slint
