[package]
name = "resize-my-knigth"
version = "0.1.0"
edition = "2021"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
description = "Just resize the window ... so does the knight"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0.2"

[dev-dependencies]
slint-build = "1.0.2"
