[package]
name = "resize-my-knight"
version = "0.1.0"
edition = "2021"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
description = "Just resize the window ... so does the knight"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0.2"

[build-dependencies]
slint-build = "1.0.2"

[package.metadata.appimage]
assets = ["images"]
auto_link = true
auto_link_exclude_list = [
    "libdl.so*",
]

[[bin]]
name = "resize-my-knight"
path = "src/main.rs"